2009-03-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decode-buffer): If context-charset is x-moe-internal,
	x-moe-internal is used as charset regardless of w3m-type.
	(w3m-w3m-parse-header): Add w3m-document-charset to handle of the
	headers. If w3m-document-charset is x-moe-internal, charset sets to
	x-moe-internal compulsorily. If x-w3m-content-encoding is exist, the
	value of x-w3m-content-encoding is used as encoding method regardless
	of w3m-type.

2009-03-03  Naohiro Aota  <naota@elisp.net>

	* w3m-hist.el (w3m-history-slimmed-history-flat, w3m-history-slim): New
	funtions.

	* w3m-session.el (w3m-session-history-to-save): Use it.

2009-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Require w3m-session instead of autoloading it.

	* w3m-session.el: Don't require w3m; require w3m-util; silent warnings.
	(w3m-session-select): Use w3m-get-buffer-create instead of
	get-buffer-create to kill the session select buffer when quitting.

	* w3m-util.el (w3m-delete-frames-and-windows): Delete frames if the
	other windows visit buffers being related to emacs-w3m or the session
	select buffer.
	(w3m-replace-in-string): eval-and-compile.

2009-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Autoload w3m-go-to-linknum.
	(w3m-lynx-like-map, w3m-info-like-map): Bind `C-c C-l' to it.
	(w3m-mode): Mention w3m-go-to-linknum in doc string.

	* w3m-util.el (w3m-read-number): New function.

	* w3m-lnum.el (w3m-go-to-linknum): Use w3m-read-number.

2008-04-12  Jose A. Ortega Ruiz  <jao@gnu.org>

	* w3m-lnum.el (w3m-go-to-linknum): New function.

2009-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-ignore-errors): New macro.
	(w3m-session-save, w3m-session-automatic-save)
	(w3m-session-deleted-save, w3m-session-crash-recovery-save)
	(w3m-session-crash-recovery-remove, w3m-session-select-mode)
	(w3m-session-select, w3m-session-make-menu-items)
	(w3m-session-last-autosave-session, w3m-session-last-crashed-session):
	Use it.
