@@ -1,3 +1,8 @@
+2009-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-w3m-parse-header):  The value of w3m-document-charset is
+	not used excluding x-moe-internal.
+
 2009-03-04  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-decode-buffer): If context-charset is x-moe-internal,
